[package]
name = "hanode"
version = "0.0.1"
authors = ["zgljl2012 <liaojl@cpchain.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = "0.48.0"
futures = "0.3.24"
async-std = {version = "1", features = ["attributes"]}
env_logger = "0.9.1"
