[package]
name = "hanode"
version = "0.0.1"
authors = ["zgljl2012 <liaojl@cpchain.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1", features = ["attributes"]}
clap = "4.0.9"
daemonize = "0.4.1"
env_logger = "0.9.1"
futures = "0.3.24"
p2p = {version = "0.0.1", path="p2p"}
tokio = { version = "1.21.2", features = ["full"] }
server = {version = "0.0.1", path="server"}
signal-hook = {version = "0.3.14"}
log = {version = "0.4.17"}
reqwest = "0.11.12"
dirs = "4.0.0"
sysinfo = "0.26.4"
