[package]
name = "p2p"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1", features = ["attributes"]}
libp2p = "0.48.0"
futures = "0.3.24"
env_logger = "0.9.1"
async-trait = "0.1.57"
log = "0.4.17"
serde_json = "1.0.85"
serde = "1.0.145"
sled = "0.34.7"
