[package]
name = "server"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1", features = ["attributes"]}
actix-web = "4.2.1"
futures = "0.3.24"
tokio = { version = "1.21.2", features = ["full"] }
p2p = {version = "0.0.1", path="../p2p"}
