[package]
name = "uds-client"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
parity-tokio-ipc = "0.9.0"
actix-rt = "2.7.0"
bytes = "1.2.1"
httparse = "1.8.0"
